同步于: 11月1日9时52分

--- a/pages/p4/951073.md
+++ b/pages/p4/951073.md
@@ -1,4 +1,4 @@
-### 为躲避香港国安法 中国科技企业再搬离(图)
+### 美国不是蜜糖老爹(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="Bigo 港版国安法 新加坡" src="https://img3.secretchina.com/pic/2020/6-19/p2714984a792592135-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/11-1/p2808451a666535017-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   电脑科技 （图片来源:Adobe stock图）
+   没有任一国家面临重大国安危机，仍继续实施募兵制。若要加强、重建台湾防御战力，征兵制势在必行。图为2020汉光演习。（图片来源：台湾国防部发言人脸书）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,73 +21,142 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [希望之声广播](http://167.172.10.89/radio.html) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  中共思想如何影響中國人：為什麼練法輪功被迫害卻成最有應得，為什麼講迫害就是涉及政治](http://141.164.51.119:10000/videos/news/truth01.html)
-
-#### [ 🔥  深度報導紀錄片《大疫襲來》- 2020年疫情大流行的背後，哪些真相被忽略、被掩蓋？](http://141.164.51.119:10000/videos/news/../corona/index.html)
-
-#### [ 🔥  音频：中央党校蔡霞教授在红色后代秘密会议上的发言：必须换习、否则亡党！（蔡霞8月17日已被处理）](http://141.164.51.119:10000/videos/news/caixia.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月18日讯】社交平台
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/Bigo" target="_blank">
-    Bigo
-   </span>
-  </strong>
-  公司决定把其服务器从香港迁往
-  <strong>
-   新加坡
-  </strong>
-  ，通过脱离
-  <strong>
-   港版国安法
-  </strong>
-  的管辖来表明自己洁身自好，与母公司保持着独立性。
+  【看中国2020年11月1日讯】此次美国大选竞争激烈，也成为国内舆论最热门话题。各路意见领袖也各自引用不同指标论据，评估大选走势乃至选举胜负。但虽然众说不一，多数国人显然认为
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  胜出连任对台湾更有利，更能卫护台湾安全，所以不免暗暗期盼他能获胜。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/港版国安法" target="_blank">
-    港版国安法
-   </span>
-   受到中国企业的嫌弃
-  </strong>
+  日前我和几位政治色彩不强，应属中间选民朋友聚会，也无可避免谈到
+  <span href="https://www.secretchina.com/news/gb/tag/美国大选" target="_blank">
+   美国大选
+  </span>
+  。诸友几乎一致希望川普连任，认为他愿意保卫台湾力场鲜明，另一方面也为他看似民调落后感到忧心，恐怕如果拜登当选一切就很难说。
  </p>
  <p>
-  香港从7月1日开始实施国安法以来，一些
+  几位朋友这一共识，明显也反映多数国人的希望和忧虑。但若仔细一想，国人这一寄望川普心态恐不是很健康或很光彩。任何国家面对外敌威胁，是否至少应该有自己的国土自己来保卫的坚强意志？过份指望，甚至想一味倚赖别人来救援，是否是一种没志气的表现？
+ </p>
+ <p>
+  国人这一普遍寄厚望于川普相挺，真似将他视为守护神现象，很让我想起四十余年前，在新加坡和一位美国外交官的对谈。
+ </p>
+ <p>
+  1979年初我因事到新加坡小住，经由朋友介绍认识一位美国使馆二秘或三秘外交官，和他相约在香格里拉饭店咖啡厅午餐小叙。当时距年底美国宣布对台断交、废约、撤军不久，我二人也谈到此后美国对台态度。外交官即表示美国必会继续关注，运用影响力防阻中国对
+  <span href="https://www.secretchina.com/news/gb/tag/台湾" target="_blank">
+   台湾
+  </span>
+  动武，而且也可能向邓小平口头取得不动武承诺，但不是他这一阶层外交人员所能知。
+ </p>
+ <p>
+  然后，外交官又补上一句我至今难忘的话，“但是台湾人民不能把美国当作蜜糖老爹”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “蜜糖老爹”是我的中文翻译。外交官的原语是Sugar Daddy。这一名词是意指慷慨提供金钱，任由放浪少女挥霍的中年老人。他使用此语含义是台湾面对新局面也应自立自强，不能光想一头靠在美国身上寻求保护，自助才能期盼人助，美国不能无限期无条件担任保护。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   靠川普自己也要争气
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  外交官指称台湾不能把美国当蜜糖老爹，虽然语近刻薄，也是苦口良药。今天也很值得一味祈祷川普连任保护台湾朝野人士深思。毕竟若是一味赖在别人身上，到头来必然引致人家轻视厌弃。自己也要争气才是正道。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  美国支援保护其他国家，不论是基于何种动机，对方都必须具备坚强奋斗求存意志和具体表现，双方才能建立健康稳定同盟情谊，美国能心甘情愿大力协助，对方也才有资格，或说得更白是有脸要求美国支援。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  今天台美两国共同面临极权帝国扩张威胁，台湾有权要求美国提供有效支援，但台湾不能把美国当作可以一头靠上去的蜜糖老爹，可以尽情撒娇耍赖，自己不图长进而只想混日子。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  1949年失去
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  企业陆续离开这个曾经实行资本主义制度的前英国殖民地，以避免因国安法而给他们在海外发展造成困扰。7月份，在海外市场非常红火的TikTok（抖音国际版）高调宣布退出香港。
- </p>
- <p>
-  为了证明自己的清白，TikTok不仅躲开了香港国安法，也把自己所有的数据库设在海外，美国用户的数据储存在美国，
-  <span href="https://www.secretchina.com/news/gb/tag/新加坡" target="_blank">
-   新加坡
-  </span>
-  是该公司最大的数据中心。TikTok一再承诺，它不会把海外用户的数据提供给中共。
- </p>
- <p>
-  <strong>
-   Bigo前高管：愿Bigo比TikTok好运
-  </strong>
- </p>
- <p>
-  Bigo是一家视频社交网络公司，与TikTok属于同一类型的社媒体，也是TikTok的一个吨位较小的竞争对手。
+  的国民党政府，1975年沦亡的南越，都曾把美国当成蜜糖老爹，而不力图自我整顿面对险局。今天台湾不能重蹈覆辙。自己若不长进，最后是谁也救不了你，混日子混到最后，终有混不下去之一天。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -102,7 +171,7 @@
   </div>
  </center>
  <p>
-  Bigo成立于2014年，其旗下的Bigo Live是一个视频直播平台，有注册用户2.25亿个。
+  今天台湾与其揣测美国何人当选更好，不如先认真自我检视一番，是否够格作为牢靠战略伙伴，乃至并肩作战盟友，是否不致被看到忧心甚至灰心。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -117,114 +186,7 @@
   </div>
  </center>
  <p>
-  Bigo服务器搬迁的决定发生在美国对在美运营中国企业强化审查的时候，也是在中印边界冲突后印度大规模封杀中国应用程序的时候。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  Bigo公司的Bigo Live是TikTok的竞争对手，但还没有被美国当局点名。该公司的一名高级主管私下对路透社表示，希望Bigo Live“不会陷入麻烦”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  路透社引用Bigo公司政府关系副总裁迈克・王（Mike Ong音译）的话说：“不幸的是，我们有时候没有办法控制别人的想法，”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  迈克・王表示，公司运营“完全独立”于其母公司欢聚时代（JOYY）。欢聚时代是一家在美国上市的中国企业，它在去年以21亿美元的价格并购了Bigo公司。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   与中共脱钩未必脱得了
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  欢聚时代公司首席执行官李学凌是公司的创始人兼董事长。迈克・王表示，他的公司在中国没有业务，公司在海外有自己的管理团队、资源和数据中心等基础设施。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  香港实施国安法后，北京当局可以依此法要求企业提供用户数据。因此，这就迫使那些寻求在海外市场发展的全球性技术公司开始撤离香港。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “香港发生的事情令人担忧，”迈克・王说，“安全起见，我们决定一定要把服务器迁往新加坡。”
+  略为留意国防国安国人，都应知道就此领域而言，必须填塞的蚁穴和必须矫正的现象，都能轻而易举列出不少案例。本文限于篇幅，只能聊举两项作为佐证，让国人照照镜子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,7 +205,7 @@
   </ins>
  </center>
  <p>
-  Bigo在印度、美国、欧洲和中东等市场都有业务，它在新加坡的数据中心容量最大。
+  其一是世间恐无其他国家，虽面临重大国安危机，仍继续以鸵鸟心态实施募兵制。今天几是国人皆知，若要加强甚至可说重建台湾防御战力，征兵制是势在必行，美国军方以及战略专家也曾多次就此提醒。但朝野头面人士面对这一议题均似是避之惟恐不及，被问到时也仅止含混其词说几句场面话，未见有一人大声疾呼事关国之安危存亡，征兵制必须恢复，更未见有文武大员重臣，为此而不惜以去对力争。国家难道不也是你们的？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,7 +220,7 @@
   </div>
  </center>
  <p>
-  尽管Bigo反复强调其独立性和它与新加坡的特殊关系，但印度还是在今年6月对包括Bigo在内的许多中国应用程序实施了封杀。印度方面称这些应用程序对印度的“主权和完整”构成了威胁。
+  其二是台湾特有景观。台湾大量军事将领，退役后甚至甫退役即如飞鸟投林，奔赴中国联谊联欢，其中更不乏前总司令级最高军职退将。更有退将扬言宁可被统一，也不甘接受合法政府统治，或“不愿为蔡英文的中华民国而战”，甚至声称联美防共是民族败类，“要做美日走狗”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,7 +235,7 @@
   </div>
  </center>
  <p>
-  印度是Bigo的最大市场之一，该公司海外5000名员工中有大约1/5都在印度工作。
+  国人看到这一幕幕匪夷所思表演，很可能联想到今天现役军方，会不会仍有不少陈廷龙、臧幼侠式心态将领？若然，则来日一旦真爆发战争，该等将领立场动向是否很值得忧虑？而在美国人看来，也会不会感觉台湾军方心态如此，移交武器又会不会完完整整转交到“解放军”手里？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -288,7 +250,7 @@
   </div>
  </center>
  <p>
-  Bigo公司表示，它已经请求新加坡和印度政府帮助解决这个问题。
+  台湾若想保国求存，必须有自己的国土自己也要保卫的认知，不能纯然寄望于蜜糖老爹。自己若不认真自我整顿，人家当蜜糖老爹也有当腻的一天。仍是前外交官那句话，台湾人民不能把美国当作蜜糖老爹。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -303,7 +265,11 @@
   </div>
  </center>
  <p>
-  新加坡是向海外发展的中国企业最喜欢的地方。新加坡大部分人都是华裔，都可以说汉语。
+  （文章由《民报》授权《看中国》转载。
+  <span href="https://www.peoplenews.tw/news/7bf78f05-3071-4974-8547-e3b15c4968c3" target="_blank">
+   原文连结
+  </span>
+  ）
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -317,21 +283,7 @@
    </center>
   </div>
  </center>
- <p>
-  病毒大流行期间，人们都居家隔离，Bigo受到用户的欢迎，成为母公司欢聚时代的一个主要增长来源。Bigo Live的月活动用户人数今年以来增加了30%多。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
+ (文章仅代表作者个人立场和观点)
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -350,7 +302,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -382,13 +334,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943317.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943317.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943317.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/18/943317.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951073.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951073.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951073.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/01/951073.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/943317.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/951073.md' width='0px' height='0px'/>
