--- a/pages/p5/951065.md
+++ b/pages/p5/951065.md
@@ -1,4 +1,4 @@
-### 神明为什么会对某人特别严厉呢？(组图)
+### 中国银行业坏账高峰将至 国有银行也不行了(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="武汉肺炎 银行 坏账" src="https://img3.secretchina.com/pic/2020/10-25/p2803292a753364525-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
+   在武汉肺炎疫情的冲击下，银行业不良贷款将会增加。（图片来源：Adobe stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,28 +29,64 @@
   </div>
  </div>
  <p>
-  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
+  【看中国2020年11月1日讯】（看中国记者李正鑫综合报导）中国五大国有
+  <strong>
+   银行
+  </strong>
+  10月30日公布的财报显示，利润和
+  <strong>
+   坏账
+  </strong>
+  都出现了不同程度的恶化。中国央行行长易纲此前也表示，在
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
+   </span>
+  </strong>
+  疫情的冲击下，银行业
+  <strong>
+   不良贷款
+  </strong>
+  将会增加。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   修行人手摘香莲　惹怒莲花池神
-  </strong>
+  中国五个大型国有银行包括：中国工商银行、中国农业
+  <span href="https://zh.wikipedia.org/zh-cn/%E9%93%B6%E8%A1%8C" target="_blank">
+   银行
+  </span>
+  、中国银行、中国建设银行、中国交通银行。这五家国有银行都是综合性大型商业银行，业务涵盖面广泛且多元，代表着中国金融界最雄厚的资本和实力。
  </p>
  <p>
-  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
+  排在五大
+  <span href="https://www.secretchina.com/news/gb/tag/银行" target="_blank">
+   银行
+  </span>
+  之首的中国工商银行，三季度的盈利虽然比二季度断崖式下跌略有改善，但跌幅依然高达4.7%。
  </p>
  <p>
-  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
+  而中国交通银行报告说，前三季度净利润同比下降12.36%，迄今未能摆脱净利润双位数下降。该行的
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%8D%E8%89%AF%E8%B4%B7%E6%AC%BE" target="_blank">
+   不良贷款
+  </span>
+  率为1.67%，较上年末上升0.2个百分点。
  </p>
  <p>
-  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
+  中国银行的净利润同比下降8.7%，集团资产减值损失近1000亿元（人民币，下同），同比增长约60%。负债总额22.6万亿元，比上年末增长8.68%，
+  <span href="https://www.secretchina.com/news/gb/tag/不良贷款" target="_blank">
+   不良贷款
+  </span>
+  率为1.48%，比上年末增加0.11个百分点。
  </p>
  <p>
-  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
+  五大银行中的另外两家银行，中国农业银行和中国建设银行的
+  <span href="https://zh.wikipedia.org/zh-cn/%E5%9D%8F%E8%B4%A6" target="_blank">
+   坏账
+  </span>
+  比例都有上升，利润也都有下降。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -65,7 +101,11 @@
   </div>
  </center>
  <p>
-  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
+  综合
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  大陆媒体报道，今年上半年，至少有1300家银行的网点、分支机构被关闭。中国银行、农业银行、工商银行和建设银行四家国有银行合计裁员2.6万人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -80,7 +120,7 @@
   </div>
  </center>
  <p>
-  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
+  这种情况与数年前中国银行业“躺着赚钱”的时光相比形成了巨大的反差。在2013年，中国国务院参事室特约研究员姚景源痛批银行暴利，称银行变成了高速公路，坐地赚钱。他说：“即使让银行的行长们回家睡觉，把一只小狗放在行长的座椅上坐着，银行照样赚钱。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +135,7 @@
   </div>
  </center>
  <p>
-  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
+  据《路透社》报道，万联证券银行行业分析师郭懿认为，经济复苏的力度将影响到人们对银行资产质量的预期，中国银行业的企业贷款偿还压力峰值可能在2021年的年中左右出现。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,25 +150,7 @@
   </div>
  </center>
  <p>
-  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
-  <br>
-   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
-  </br>
+  通过上市银行发布的财报可以看到，上市银行的资产情况并不好。上市银行是中国银行业中的佼佼者，其盈利表现会强于非上市银行。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,7 +165,22 @@
   </div>
  </center>
  <p>
-  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
+  据中国官媒《证券日报》报道，数量庞大的非上市银行中，利润出现大幅度下滑，其中亏损企业的占比高达75%。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  6月18日，中国央行行长易纲在上海陆家嘴论坛发表视频讲话时称，“我们认为，疫情应对期间的金融支持政策具有阶段性，要注重政策设计激励相容，防范道德风险，要关注政策的‘后遗症’，总量要适度，并提前考虑政策工具的适时退出。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +199,7 @@
   </ins>
  </center>
  <p>
-  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
+  易纲说：“在疫情冲击下，银行不良贷款会有所增加。因此，加大不良资产处置力度，是增强银行支持实体经济可持续性的重要措施。这也是金融部门承担实体经济成本的一个重要方面。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +214,7 @@
   </div>
  </center>
  <p>
-  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
+  中国证监会主席易会满也在上海陆家嘴论坛表示，股票、债券、外汇和大宗商品市场之间高度联动，金融风险跨市场、跨行业、跨领域交叉传染的特征也日益凸显。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,7 +229,7 @@
   </div>
  </center>
  <p>
-  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
+  近年来中国金融风险高企，官方不断发声守住不发生系统性金融风险的底线，银行业的金融风险频发。例如，2019年5月29日，上海报业集团旗下的《财联社》发表题为“监管人士：部分农商行、城商行处于技术型破产边缘”的报道。报道引述金融监管人士的消息称，“中国部分农村及城市商业银行，因面临严重的信用风险，处于技术破产的边缘。这类金融机构恐将按照市场化原则清退。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,7 +244,7 @@
   </div>
  </center>
  <p>
-  参考资料：民间故事
+  相关消息引发外界关注，多家媒体相继转载上述报道，但报道很快遭到官方的封锁、删除。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,13 +308,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951065.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951065.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951065.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/01/951065.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/951065.md' width='0px' height='0px'/>
