--- a/pages/p5/951067.md
+++ b/pages/p5/951067.md
@@ -1,4 +1,4 @@
-### 美中科技战号角响起 将经济脱钩进行到底(图)
+### 中共称中美脱钩没好处 习近平真的服软了？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="科技 经济 川普" src="https://img3.secretchina.com/pic/2020/8-27/p2763164a42913095-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="中共 脱钩 习近平 川普" src="https://img3.secretchina.com/pic/2020/9-29/p2785281a638229807-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   美中两国的经济脱钩进行式，能停得下来吗？（图片来源：Adobe Stock）
+   川普多次提及脱钩，那么习近平真的服软了？（图片来源：Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,69 +21,168 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  秦鹏快评：华为7宗罪，为什么华为必须“死”？](http://141.164.51.119:10000/videos/news/qp01.html)
-
-#### [ 🔥  秦鹏快评：钟南山到底是功臣还是罪人？李文亮缺席表彰大会，网民不满！](http://141.164.51.119:10000/videos/news/qp02.html)
-
-#### [ 🔥  《走出文化亡國》第十一集 江峰走进栏目和李军一起畅谈中共逆淘汰](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月10日讯】美国总统
+  【看中国2020年11月1日讯】（看中国记者李正鑫综合报导）
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
+   中共
+  </strong>
+  中央10月30日召开新闻发布会称，中美两国彻底
+  <strong>
+   脱钩
+  </strong>
+  不现实，也没有好处。美国总统
+  <strong>
+   川普
+  </strong>
+  多次提及两国经济可以脱钩，那么中国国家主席
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+    习近平
    </span>
-   (特朗普)
   </strong>
-  本周一又以“脱钩”为由强调，美国如果不和中国做生意，也不吃亏。在川普提出美中“
-  <strong>
-   经济
-  </strong>
-  脱钩”前，路透社报导，美国正考虑将中国最大的芯片制造商中芯国际增列至出口管制清单。美国接连瞄准中国的半导体
-  <strong>
-   科技
-  </strong>
-  产业，两国的经济脱钩进行式，能停得下来吗？
+  真的服软了？
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  从中兴到
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
+  北京当局10月30日首次以中共中央名义举行新闻发布会，参会的有
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%B8%AD%E5%85%B1" target="_blank">
+   中共
   </span>
-  ，美国再次瞄准中国科技行业，这一次的目标对准中芯国际。
+  中央宣传部分管日常工作的副部长王晓晖，中央政策研究室主任江金权，中央财经委员会办公室分管日常工作的副主任韩文秀，国家发展和改革委员会副主任、国家统计局局长宁吉喆，科学技术部部长王志刚。
  </p>
  <p>
-  路透社9月4日引述未具名的美国国防部官员的话说，中芯国际和
+  和此前“战狼式”的外交辞令不同，此次新闻发布会向人们展示了
+  <span href="https://zh.wikipedia.org/zh-cn/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
+   习近平
+  </span>
+  所掌控的中共中央的另一种截然不同的语气。
+ </p>
+ <p>
+  来自日本朝日新闻的记者提问，“五中全会的公报提出了2035年的远景目标，中国经济实力、科技实力、综合国力大幅跃升。但是在中美对立的严峻情况下，中美经济存在
+  <span href="https://en.wikipedia.org/wiki/Decoupling_(organizational_studies)" target="_blank">
+   脱钩
+  </span>
+  的可能性。那么，中国如何实现2035年的远景目标？”
+ </p>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
+   中共
+  </span>
+  中央财经委员会办公室副主任韩文秀回应说：“中美作为全球最大的两个经济体，两国之间经济联系是由双方经济结构的互补性和全球经济的开放性所决定的，彻底脱钩根本不现实，也没有好处。”
+ </p>
+ <p>
+  此番话在中共十九届五中全会刚结束的背景下说出来，意味深长。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中共十九届五中全会是一次经济为主题的会议，六千多字的会议公报中，和经济密切相关的词汇却不多：提及‘消费’1次、‘经济增长’2次、‘投资’3次、‘就业’3次、‘内需’4次……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="中共 脱钩 习近平 川普" src="https://img3.secretchina.com/pic/2020/10-31/p2807751a874615072-ss.jpg" style="height:379px; width:600px"/>
+  <br>
+   会议公报提及‘安全’一词高达22次。（图片来源：东吴证券研究所）
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  习近平近年来不断发声，表示以消费为主拉动经济增长，但是，会议公报提及‘安全’一词高达22次、‘创新’15次、‘开放’11次……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在内外交困的情况下，这或反映出习近平心中的惶恐和想要做出一些改变意图。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在观察家们看来，中共中央10月30举行新闻发布会，声言中美两国彻底
+  <span href="https://www.secretchina.com/news/gb/tag/脱钩" target="_blank">
+   脱钩
+  </span>
+  不现实也没有好处，这显然是在中美关系问题上试图替习近平或帮习近平转弯。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  据《美国之音》10月31日报道，学者和评论家胡平表示，现在美国不想买
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  解放军关系密切，川普政府正考虑是否要采取对待华为的同样模式，将中芯国际列入美国的出口管制实体清单中。
- </p>
- <p>
-  美国的管制还未落实，在香港上市的中芯国际股价周一就应声暴跌，盘中一度大跌两成，中芯国际发表声明指出，企业与中国军方“毫无关系”，也从未有任何涉及军事应用的经营行为。中芯国际还称，愿与美国各相关政府部门沟通，化解可能的歧见和误解。
- </p>
- <p>
-  不过，川普政府对美国与中国的生意往来，已心有定见。川普周一再一次回应美中脱钩时说：“说到这个词‘脱钩’，那是个‘有趣的词’。我们损失了数十亿美元……如果我们不跟中国做生意，我们就不会损失数十亿美元了。那就是‘脱钩’，所以，你得开始这样思考脱钩。”
- </p>
- <p>
-  <strong>
-   北京助半导体行业弯道超车 美国急踩煞车
-  </strong>
+  的东西，也不卖给中国重要的东西，“现在中共最担心的就是这一点。中共就很希望中美之间还能延续和发展过去几十年来那种经济贸易往来，因为过去中共从这种往来中得到了很多很多的好处。它担心的就是这种好事从此告一段落。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +197,7 @@
   </div>
  </center>
  <p>
-  中芯国际是中国最大的芯片制造商，也是华为芯片的供应商之一，在《中国制造2025》计划里，是北京重点扶持中国芯片行业的国家队领头羊代表之一，今年七月刚在上海科创板上市，股价一度飙涨246%，市值达人民币6700亿元，是中国A股市值最高的半导体行业。
+  胡平说：“你看他最近使劲买美的农产品，做出兑现美中第一阶段贸易协议的姿态，就是说‘我们还是很好的贸易伙伴呢。干嘛不玩儿了呢？我们玩儿的挺好啊。’他就是希望把这事拉住，要表明这个立场。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,122 +212,11 @@
   </div>
  </center>
  <p>
-  不过，在制程技术上，中芯国际目前落后台湾的台积电至少两个世代。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  芯片就像是半导体行业里的心脏，中国半导体产业才开始加速、试图弯道超车，就被美国设下路障、猛踩煞车，甚至要拿掉中国试图藉由美国技术发展自己的中国引擎。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  华盛顿智库战略暨国际研究中心（CSIS）资深副总裁路易斯（James Lewis）接受本台访问时就说，是中国自身发展
-  <span href="https://www.secretchina.com/news/gb/tag/科技" target="_blank">
-   科技
+  美国方面认为北京当局多年来拒绝履行加入世界贸易组织（WTO）时做出的承诺，并且坚持实行不公平的贸易政策和做法，
+  <span href="https://zh.wikipedia.org/wiki/%E5%94%90%E7%B4%8D%C2%B7%E5%B7%9D%E6%99%AE" target="_blank">
+   川普
   </span>
-  的作法，招致美国与全球侧目，《中国制造2025》计划很难如期实现了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  他分析，美国半导体行业认为，在和中国做生意的同时，相关风险是可以管控的。但对川普政府而言，在科技领域全面与中国脱钩，才是美国的胜利。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   美国棒打出头鸟 中国科技业者吃闷棍
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  路易斯还表示，有分析认为，中国国家主席
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
-  </span>
-  上台后，把中国在科技领域上的野心勃勃变成书面文字，让各国警醒，“某种程度上来说，这是中国的一大失策”；就算美国年底总统选举结果有改变，美中科技领域的脱钩仍会持续发生，但速度会放缓。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  总部位于纽约的美国独立咨询机构中国褐皮书（China Beige Book）总裁米勒（Leland Miller）也告诉本台，美中在科技领域的脱钩发展，是子弹已上膛的现在进行时，但把中芯国际放上出口管制的实体清单上，能不能有效击中美国想要的目标，不无疑问。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “在我们探讨所有美中之间可能脱钩的领域时，最有可能发生的就是科技领域。我认为，我们已经朝着美中科技脱钩的方向前进了，但问题在于，如果只是单单把中芯国际放上出口管制的实体清单，就像是一开始对付华为那样，真会导致中国的科技公司关门大吉吗？我们还没有答案。”米勒说。
+  政府为此对中国采取反制措施，并不表示不惜跟中国脱钩。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -247,7 +235,10 @@
   </ins>
  </center>
  <p>
-  米勒解释，熟知美国商务部实体清单管制方式的人士都知道，这是有漏洞的，在他看来，放上管制清单只是“政治信号”，效益不大，他说，这也是为什么商务部后来对华为海外子公司得扩大管制的原因；另一方面，扩大管制范围是否符合美国半导体行业的发展利益？这也得看白宫如何看待中国获取美国的芯片科技，对美国的国家安全风险造成的威胁有多大。
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)9月7日在白宫的劳工节记者会上回答记者问时再次提到美中脱钩，他说：“你提及脱钩这个词，这是个有意思的词。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -262,7 +253,7 @@
   </div>
  </center>
  <p>
-  美国半导体产业协会（SIA）资料显示，美国半导体行业长期处于全球领先地位，占全球半导体市场近半份额。2019年，美国半导体行业为出口达460亿美元，是美国第五大出口产品，在美国直接或间接创造了逾百万的就业机会。亚太地区的最大半导体市场是中国，占亚太市场的56%、全球的35%。
+  川普说：“我们损失了数十亿美元，而我们如果不跟中国做生意，我们就不会损失几十亿美元。那就是所谓的脱钩，所以你要开始考虑它了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -277,9 +268,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   美中脱钩： 从科技芯片到棉花贸易
-  </strong>
+  川普说：“不论是脱钩，或是照我已经在做的大规模征收关税，我们将终止我们对中国的依赖，因为我们不能依赖中国。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -294,7 +283,7 @@
   </div>
  </center>
  <p>
-  除了芯片外，美国《纽约时报》的报道说，川普政府还考虑对来自中国新疆地区的部分或全部棉制品祭出禁令，原因是外界普遍担忧中国在新疆违反人权的种种举措，包括强迫劳动。
+  Fox News在8月23日播出的采访中，川普表示，中美经济有可能脱钩。他表示，“我们没必要”和中国做生意，后来他又谈及脱钩：“就是说，如果我确定他们没有以正确的方式对待我们，我肯定会那样做。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -309,22 +298,7 @@
   </div>
  </center>
  <p>
-  不只如此，华盛顿清理自家门户的行动也没有放缓。外媒报道，白宫已要求各大联邦机构提供涉华资金明细，以了解这些款项对中国产生的实际影响。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  从科技贸易到美国的对外援助，美国开始全面检讨与中国的交往政策，尽管中国外交部也开始改变战狼作风，放低姿态呼吁美中应该恢复对话、拒绝走向新冷战并且也不想与美国脱钩，但美中两国当前“对抗多过对话”的持久战局势，中国要想寄望美国总统大选后能立刻改变恐怕是天马行空的幻想。
+  今年6月，美国财长姆努钦曾表示，如果美国公司无法在中国公平竞争，美中经济将会“脱钩”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -356,7 +330,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -388,13 +362,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945667.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945667.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945667.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/10/945667.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951067.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951067.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951067.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/01/951067.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/945667.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/951067.md' width='0px' height='0px'/>
