--- a/pages/p3/951091.md
+++ b/pages/p3/951091.md
@@ -1,4 +1,4 @@
-### 惊呆：“瑞士腕表”里竟有一半是假的?(图)
+### CNN撰稿人：“川普值得第二任” 理由很简单(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,14 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="瑞士腕表 劳力士手表 假冒 中国" src="https://img3.secretchina.com/pic/2020/8-12/p2752531a836040030-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/11-1/p2808422a362110728-ss.jpg"/>
   <br>
-   一份备忘录指出，2018年瑞士出口腕表总数达到2370万只，但这几乎只占了假冒腕表出口数量的一半。（
-   <strong>
-    劳力士
-   </strong>
-   手表示意图/图片来源：Pixabay)
+   美国现任总统川普（图片来源：Steve Pope/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -25,78 +21,53 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《街对面的烛光》- 中领馆前16年7x24小时接力静坐抗议](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  中美熱戰在即嗎？中共將如何消亡？（脑洞vs黑洞 第21集）](http://141.164.51.119:10000/videos/news/brain01.html)
-
-#### [ 🔥  《漫谈党文化》今天的共产党和过去不一样了？](http://141.164.51.119:10000/videos/news/../res/mtdwh/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月12日讯】
+  【看中国2020年11月1日讯】美国
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/瑞士" target="_blank">
-    瑞士
+   总统大选
+  </strong>
+  将在当地时间11月3日举行，目前已有超过8500万选民提早投票，现任总统
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+    川普
    </span>
-   钟表
+   (特朗普)
   </strong>
-  以高品质闻名全世界，每年全球市场的高级腕表主要来自瑞士。不过，与此同时，与之共存的是规模庞大的
+  （Donald Trump）与民主党参选人拜登（Joe Biden）持续抢攻“摇摆州”；对此，担任过美国前总统小布什（George Bush）特助的左派媒体《
   <strong>
-   假冒品牌
+   CNN
   </strong>
-  腕表市场。根据瑞士钟表工业联合会2019年发布的一篇《打击腕表行动》备忘录中指出，2018年瑞士出口腕表总数达到2370万只，但这几乎只占了假冒腕表出口数量的一半。
+  》撰稿人詹宁斯（Scott Jennings）表示，“川普值得第二任”。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  综合新闻报道，2019年，瑞士钟表工业联合会发布了一篇《打击腕表行动》备忘录。当中指出，2018年瑞士出口腕表总数达到2370万只，但这几乎只占了假冒腕表出口数量的一半；2018年，假冒瑞士腕表的出口量大约占了4000万只。
- </p>
- <p>
-  高级腕表品牌通常是假腕表制表商最热衷仿冒的对象。如：Rolex（
-  <span href="https://www.secretchina.com/news/gb/tag/劳力士" target="_blank">
-   劳力士
+  詹宁斯在《
+  <span href="https://www.secretchina.com/news/gb/tag/CNN" target="_blank">
+   CNN
   </span>
-  ）、Cartier（卡地亚）、Bulgari（宝格丽）等高级腕表品牌。
+  》发表评论指出，川普的政绩显而易见，不仅降低美国税率，还支持美国军人，让敌人知道美国有能力收拾他们，“看看伊斯兰国（ISIS）前领袖阿布．贝克尔．巴格达迪（Abu Bakr al-Baghdadi）或前伊朗圣城军指挥官卡西姆．苏雷曼尼（Qasem Soleimani）的下场就知道了”。
  </p>
  <p>
-  瑞士政府和钟表行业，不仅要对付猖獗的假货，还要面对日益逼真的腕表仿冒技术。
+  詹宁斯写道，虽然川普仍有改善空间，但自己身为保守派，拜登绝不代表他支持的政策方向，“拜登几乎在我关心的每个议题上都未能通过测试，我希望美国能够彻底摆脱他的关注，尤其是在堕胎方面”。
  </p>
  <p>
-  8月初，由历峰集团控股的高端二手腕表电商平台Watchfinder Co.（以下简称Watchfinder）上的
-  <span href="https://zh.wikipedia.org/wiki/%E5%8A%B3%E5%8A%9B%E5%A3%AB" target="_blank">
-   劳力士
-  </span>
-  手表为例，分析了假冒腕表越来越逼真的原因。
+  詹宁斯说，川普纵有缺失，但这次选举投票将影响未来4年，美国人民很快将能够接种疫苗，这大部分归功于川普的在研发疫苗的“曲速行动（Operation Warp Speed）”上的领导，而且无论谁胜选，美国都会战胜这种病毒。因此，他认为选择已经很清楚了。
  </p>
  <p>
-  在一则8分钟的短视频里，Watchfinder分析道，飞速发展的三维模型打印等技术为假表制造商提供了方便。这些非法的制表商可以利用计算机模型创造出少量、但高质量的仿冒表。
+  华人网友热议：
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  而快速成形机器设备比以往更加精确，快速和成本低廉。有些热衷于仿冒劳力士表的消费者，还因此特意创建了一个隐秘社区，推动仿冒腕表质量的进一步提升。
+  @Changshi：我周围80%华人选trump（川普）。两边挣钱的或收入低的、还有自认为是精英的选白等（拜登）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -111,7 +82,7 @@
   </div>
  </center>
  <p>
-  劳力士被认为是最保值的瑞士腕表，与之相对应的是规模巨大的劳力士赝品。
+  @落基山99：我和我的家人朋友们都支持川普总统连任。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -126,7 +97,7 @@
   </div>
  </center>
  <p>
-  据2016年欧洲知识产权观察机构（European Observatory on Infringements of Intellectual Property Rights）在一篇报告中指出，欧洲市场上合法腕表和珠宝行业的损失规模达到19亿欧元，占该行业市场规模的13.5%。
+  @xingyi：今年是压倒性优势大获全胜！女儿刚刚去另一个学校的同学家策划minithon募捐之事，半小时车程一路全都是挺川普的牌子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -141,11 +112,37 @@
   </div>
  </center>
  <p>
-  而根据高级指标基金会（FHH）援引瑞士联邦海关管理局数据，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  大陆、香港、新加坡、欧盟等地区，是仿冒腕表与首饰的主要来源地。
+  @好奇心想象力：哈哈！除了媒体在唱拜登贺锦丽赢，这几天有谁看到他们人影了？当贺锦丽在台上哈哈大笑10分钟，镜头转到台下观众看到的却是10几台车，大家就明白谁会赢得大选了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  @southgate：连传统左倾的CNN都这么说，可见白等和左棍多么不得人心。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  @royalflush：坚决远离民主党。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +174,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -209,13 +206,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942729.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942729.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942729.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/12/942729.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/951091.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/951091.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/951091.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/01/951091.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/942729.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/951091.md' width='0px' height='0px'/>
