同步于: 11月1日11时52分

--- a/pages/p3/951094.md
+++ b/pages/p3/951094.md
@@ -1,4 +1,4 @@
-### 路边开直播“陌生女突然闯入”　转头才知救了她一命(图)
+### 澳移民局：申请签证需认同澳洲价值观(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="韩国 直播 陌生人" src="https://img3.secretchina.com/pic/2020/8-13/p2752861a970196135-ss.jpg" style="height:336px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/6-24/p2718101a397440584-ss.jpg"/>
   <br>
-   直播中，一名陌生女孩突然闯入装熟，事后才知原来她遇到危险了。（视频截图）
+   澳大利亚国旗（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,85 +21,52 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  《街对面的烛光》- 中领馆前16年7x24小时接力静坐抗议](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  中美熱戰在即嗎？中共將如何消亡？（脑洞vs黑洞 第21集）](http://141.164.51.119:10000/videos/news/brain01.html)
-
-#### [ 🔥  《漫谈党文化》今天的共产党和过去不一样了？](http://141.164.51.119:10000/videos/news/../res/mtdwh/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月12日讯】有时候，
+  【看中国2020年11月1日讯】
   <strong>
-   陌生人
-  </strong>
-  的一个小小举动和细心，很可能会救了其他人一条宝贵的生命。最近，一支旧影片意外在Twitter上再度传开。一名陌生女子突然走入一群正在
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/韩国" target="_blank">
-    韩国
+   <span href="https://www.secretchina.com/news/gb/tag/澳洲" target="_blank">
+    澳洲
    </span>
   </strong>
-  街头做
+  移民代理部长Alan Tudge于10月30日在移民局官方网站发表声明，即日起大多数
   <strong>
-   直播
+   签证
   </strong>
-  的YouTuber，表现与直播主很熟的样子。虽然主播并不认识她，但还是与她热情聊起来。事后，这群YouTuber才知道，他们的举动，无意中救了这个陌生女孩。
+  申请者都需签署或接受最新版本的《澳洲价值观声明》（Australian Values Statement），新声明更侧重于自由、尊重、平等和法治等
+  <strong>
+   价值观
+  </strong>
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  在这段再次在网上热起来的旧影片中，一群YouTuber在韩国街头开设
-  <span href="https://www.secretchina.com/news/gb/tag/直播" target="_blank">
-   直播
+  澳洲总理莫里森自上任起已在“澳洲价值”议题上做出多次修改，此次是该声明自2007年推出以来的最大变动。
+ </p>
+ <p>
+  根据移民局网站公布的最新信息，澳大利亚的
+  <span href="https://www.secretchina.com/news/gb/tag/价值观" target="_blank">
+   价值观
   </span>
-  ，看起来就跟普通的旅游Vlog没两样，但影片开始没多久，忽然有个陌生的女孩子走进镜头里，好像遇到熟人一样，向其中一位知名实况主Jake搭话。
+  和原则包括：
  </p>
  <p>
-  一开始，Jake的表情显得莫名其妙，但不久后女孩小声跟他解释，附近有个男人已经跟踪她好一段路了，希望他们能帮帮她。
+  ．尊重个人的自由和尊严；
  </p>
  <p>
-  几个YouTuber立刻明白状况，很自然的假装是女孩的朋友，拉着她一起聊天拍片。画面中可以看见，一个男子一直在附近徘徊、盯着他们，而这群人则一直陪着女孩，直到男子离开。
+  ．宗教自由（包括不信仰特定宗教的自由）、言论自由和结社自由；
  </p>
  <p>
- </p>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="en">
-   I got the chills from this. Girl gets stalked by a creeper, saw a group doing live streaming and jumped right in pretending they’re her friends. The group quickly figured out what’s going on and played along. It probably saved her life. Life pro tip for all the ladies out there.
-   <span href="https://t.co/0zO6qb6RgQ">
-    pic.twitter.com/0zO6qb6RgQ
-   </span>
-  </p>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  — Ron 🅧 (@ronckk)
-  <span href="https://twitter.com/ronckk/status/1289007782558015490?ref_src=twsrc%5Etfw">
-   July 31, 2020
-  </span>
- </blockquote>
- <p>
-  分享的网友感叹，还好，这群人很快意识过来发生了什么事，也鼓励遇到跟踪狂的女性把这招学起来，别害怕向陌生人求助。
+  ．坚守法治，即所有人都受法律约束并应遵守法律；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,7 +81,7 @@
   </div>
  </center>
  <p>
-  这支影片PO上Twitter后，很快获得了超过454万次观看、近7万次转推。更有人呼吁：“如果公众场合有女生突然凑过来装熟，好像她是你的朋友，最好配合她，因为她很可能陷入危险中。”
+  ．议会民主，即澳大利亚法律由人民选举产生的议会决定，法律至高无上，并凌驾于任何与之相悖的宗教或世俗“法律”之上；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,7 +96,7 @@
   </div>
  </center>
  <p>
-  有许多网友就分享了类似的经验。
+  ．所有人机会均等，不论其性别、性取向、年龄、残健情况、种族、民族或族裔血统；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -144,7 +111,22 @@
   </div>
  </center>
  <p>
-  “以前的朋友在动漫展上也遇过。我当时跟他们还不太熟，但他们立刻跳进去帮助被跟踪的女生，大喊‘你在这里啊！我们正打算拍完照后去吃饭，来吧！’直到我们到麦当劳坐下来吃饭，那个女生才终于哭了出来。”
+  ．所有人“机会公平”，拥护相互尊重;宽容待人;热心助人；机会均等；
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  ．英语被定为澳大利亚国语，并且是澳大利亚社会的重要统一元素。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -163,7 +145,11 @@
   </ins>
  </center>
  <p>
-  “你也可以。有一次，一个女人突然走过来抱我，问我妈过得好不好，几分钟后她才小声说，她注意到有个男的一直在跟着我，她打算把他吓走。她一直陪我走到目的地。我那时候才14岁。真的要称赞她。最恐怖的是我那时候在搭地铁，她刚好跟我在同一节车厢，发现那个男的已经跟了我6站。”
+  Alan Tudge表示：“这些共同价值团结了澳洲人，支撑着本国的自由和繁荣，并吸引数以百万移民来澳探访、工作和定居。临时和永久居留
+  <span href="https://www.secretchina.com/news/gb/tag/签证" target="_blank">
+   签证
+  </span>
+  申请人须签署内容相同的声明，证实他们明白、并且会在举止上符合澳洲的价值观和法律。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -178,7 +164,7 @@
   </div>
  </center>
  <p>
-  也有男性推友发问，万一发现有女性被跟踪，要怎么在不吓到她的前提下帮忙，毕竟要是有个陌生男子突然跑来装熟，可能反而会被误以为是变态。
+  此次更改的《澳洲价值观声明》是联邦政府拨款6,280万澳元保护澳洲社会凝聚力的政策一部分，并基于2019年公布的7,100万澳元社会和谐计划（Social Cohesion Package）共同实施。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -193,7 +179,22 @@
   </div>
  </center>
  <p>
-  而女推友也表示确实有可能，最好的方法是盯紧跟踪狂，在不危险的前提下，可以试着分散他的注意力，或是上前跟他借手机、问路，制造机会让女生能脱身。
+  该政策另一项措施将是今年11月15日生效的更新版入籍考试题目，其中将加强考核申请人对澳洲价值观的了解。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  有当地律师表示，如果签证、移民申请者被发现违反声明，有可能被取消签证。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,7 +226,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -257,13 +258,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942732.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942732.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/942732.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/13/942732.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/951094.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/951094.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/951094.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/01/951094.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p3/942732.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/951094.md' width='0px' height='0px'/>
