同步于: 11月1日21时52分

--- a/pages/p7/911140.md
+++ b/pages/p7/911140.md
@@ -1,4 +1,4 @@
-### 缺粮与洪灾的代罪羔羊 金正恩下令没收宠物犬(图)
+### 神明为什么会对某人特别严厉呢？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="朝鲜领导人金正恩" src="https://img2.secretchina.com/pic/2019/8-12/p2489792a209362271-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
   <br>
-   朝鲜领导人金正恩(图片来源: KIRILL KUDRYAVTSEV/AFP/Getty Images)
+   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,75 +21,36 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [希望之声广播](http://167.172.10.89/radio.html) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  深度報導紀錄片《大疫襲來》- 2020年疫情大流行的背後，哪些真相被忽略、被掩蓋？](http://141.164.51.119:10000/videos/news/../corona/index.html)
-
-#### [ 🔥  音频：中央党校蔡霞教授在红色后代秘密会议上的发言：必须换习、否则亡党！（蔡霞8月17日已被处理）](http://141.164.51.119:10000/videos/news/caixia.html)
-
-#### [ 🔥  美拟禁中共党员入境 前网络宣传员退党](http://141.164.51.119:10000/videos/news/awaken.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月18日讯】
-  <strong>
-   朝鲜
-  </strong>
-  领导人
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/金正恩" target="_blank">
-    金正恩
-   </span>
-  </strong>
-  7月才颁布禁止饲养宠物的禁令，目前又传出下令没收首都平壤的
-  <strong>
-   宠物狗
-  </strong>
-  。此举主要试图消除一般民众对上流阶层日益不满的情绪，可是有人怀疑，该国在缺粮与洪灾的处境下，这些遭没收的宠物犬可能变成餐桌上的食物了。
+  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据《朝鲜日报》报导指出，有消息人士表示，
-  <span href="https://zh.wikipedia.org/wiki/%E9%87%91%E6%AD%A3%E6%81%A9">
-   金正恩
-  </span>
-  在7月颁布了禁止饲养宠物的禁令，还批评其为一种“资产阶级意识形态”的污染风气。平壤政府已彻查有饲养宠物狗的家庭，甚至且强制没收这些犬只。消息人士透露，部分狗将会被送到动物园或狗肉店，饲主们仅能于背后诅咒金正恩，其他就无能为力了。
- </p>
- <p>
-  报导批指，
-  <span href="https://zh.wikipedia.org/wiki/%E6%9C%9D%E9%B2%9C%E6%B0%91%E4%B8%BB%E4%B8%BB%E4%B9%89%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD">
-   朝鲜
-  </span>
-  当局一向不重视动物权利，还认为饲养宠物是西方资本主义的奢侈行径。不过，朝鲜在1989年举办了“世界青年和学生联欢节”之后，其态度似乎有所放宽，也掀起不少平壤的上流社会人士开始养狗，以此来彰显身分地位。
- </p>
- <p>
-  消息人士称，普通老百姓仅能在他们的住家旁养猪与家畜，对比一些高官与有钱人养得起
-  <span href="https://www.secretchina.com/news/gb/tag/宠物狗" target="_blank">
-   宠物狗
-  </span>
-  ，已引发民众的反感。有一名脱北者说，此次的限制行动，比起以往还要更加的严厉。
- </p>
- <p>
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/朝鲜" target="_blank">
-    朝鲜
-   </span>
-   正在集中力量防范水灾
+   修行人手摘香莲　惹怒莲花池神
   </strong>
  </p>
  <p>
-  7日，朝鲜官媒公布了最高领导人金正恩亲自驾车到灾区视察的照片，在画面中他亲自驾驶豪华休旅车勘灾，致使与一旁的灾民形成强烈的落差，引发国际舆论热议。
+  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
+ </p>
+ <p>
+  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
+ </p>
+ <p>
+  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
+ </p>
+ <p>
+  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,7 +65,7 @@
   </div>
  </center>
  <p>
-  8月 9日，据朝鲜劳动党机关报《劳动新闻》报道，朝鲜人民军部队前往国务委员会委员长金正恩在6-7日亲赴视察的黄海北道银波郡大青里洪水灾区，以开展抗洪救灾工作。部队官兵们还动员了重型装备抢修堤坝，并将被水冲倒的农作物扶正。从报道中可知，朝鲜正在集中力量防范水灾，减少的农业损失。
+  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -119,9 +80,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   朝鲜千万人挨饿
-  </strong>
+  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -136,7 +95,7 @@
   </div>
  </center>
  <p>
-  据联合国粮食和农业组织（FAO）、全球营养改善联盟（GAIN）在今年共同发表的报告中称，朝鲜25岁以上居民，他们每人每天的蔬菜摄取量与谷物摄取量，都超了越世界平均。可是在水果、肉类、奶类和坚果类等方面，其摄取量上却严重地落后世界的平均值。
+  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -151,7 +110,40 @@
   </div>
  </center>
  <p>
-  6月9日，世界粮食计划署（WFP）发言人贝尔斯女士（Elisabeth Byrs）于视讯会议上指出，朝鲜仍然还有40%以上居民，也就是大约1000万人口是处于粮食供应不稳定的状态。因此随时需要人道救援，而且朝鲜的防疫隔离措施，仅会让粮食不足的问题更严重而已。
+  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
+  <br>
+   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -170,9 +162,7 @@
   </ins>
  </center>
  <p>
-  <strong>
-   奢华的金正恩
-  </strong>
+  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,7 +177,7 @@
   </div>
  </center>
  <p>
-  千万朝鲜人民处于饥饿状态，但金正恩的生活却过得极尽奢华，在被披露拥有多辆豪华奔驰轿车之后，之后又被曝佩戴价值高达1400多万韩元（约1.15万美元）的瑞士名表。
+  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -202,11 +192,7 @@
   </div>
  </center>
  <p>
-  从2018年4月金正恩和韩国总统文在寅会晤以来，他已经多次乘坐顶级的奔驰豪车，亦即迈巴赫S600卫队（Maybach S600 Guard)及迈巴赫S62，与文在寅、美国总统
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  及俄罗斯总统普京等人会面。上述两款车型，都是装甲防弹车，每一辆售价更高达160万美元，堪称是世界上许多国家领导人的首选坐车。
+  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -221,7 +207,7 @@
   </div>
  </center>
  <p>
-  2019年7月25日，金正恩在视察短程弹道导弹发射之时，曾经举起双筒望远镜观看发射的情形，但也让他左手腕上的金色边框手表，因此而曝光；2019年8月8日，韩国《朝鲜日报》记者获悉，金正恩当日佩戴的是价值高达约1.15万美元的瑞士名牌手表。这次是继金正恩被报导拥有多辆豪华奔驰轿车之后，再度被曝出佩戴瑞士名表。
+  参考资料：民间故事
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -253,7 +239,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -285,13 +271,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943375.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943375.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/943375.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/18/943375.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/943375.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
